<resources>
    <string name="app_name">NetworkIpLocation</string>
    <string name="action_settings">Settings</string>

    <string name="ip_address_button">Get IP Address:</string>
    <string name="getting_ip">Getting IP address...</string>
    <string name="location_info_button">Get Location Info</string>
    <string name="country_label">Country:</string>
    <string name="timezone_label">Time Zone:</string>
    <string name="city_label">City:</string>
    <string name="region_label">Region:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
</resources>
