<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".GetIpLocationActivityFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/ip_address_button"
        android:id="@+id/button_getIp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:id="@+id/tv_ipAddress"
        android:layout_marginLeft="@dimen/ip_address_marginLeft"
        android:layout_alignTop="@+id/button_getIp"
        android:layout_toRightOf="@+id/button_getIp"
        android:layout_toEndOf="@+id/button_getIp"
        android:gravity="center_vertical"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/location_info_button"
        android:id="@+id/button_locationInfo"
        android:layout_below="@+id/button_getIp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/location_button_marginTop"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_locationInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/table_padding_left">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:text="@string/country_label"
                android:id="@+id/tv_countryLabel"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_vertical|left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:id="@+id/tv_country"
                android:layout_column="1"
                android:layout_weight="2"
                android:gravity="center_vertical|left"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:text="@string/timezone_label"
                android:id="@+id/tv_timezoneLabel"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_vertical|left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:id="@+id/tv_timezone"
                android:layout_column="1"
                android:layout_weight="2"
                android:gravity="center_vertical|left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:text="@string/city_label"
                android:id="@+id/tv_cityLabel"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_vertical|left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:id="@+id/tv_city"
                android:layout_column="1"
                android:layout_weight="2"
                android:gravity="center_vertical|left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:text="@string/region_label"
                android:id="@+id/tv_regionLabel"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_vertical|left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:id="@+id/tv_region"
                android:layout_column="1"
                android:layout_weight="2"
                android:gravity="center_vertical|left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:text="@string/latitude_label"
                android:id="@+id/tv_latitudeLabel"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_vertical|left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:id="@+id/tv_latitude"
                android:layout_column="1"
                android:layout_weight="2"
                android:gravity="center_vertical|left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:text="@string/longitude_label"
                android:id="@+id/tv_longitudeLabel"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center_vertical|left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/table_row_height"
                android:id="@+id/tv_longitude"
                android:layout_column="1"
                android:layout_weight="2"
                android:gravity="center_vertical|left"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
